# FieldOps-Copilot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  fieldops-agent-loop.mermaid  fieldops-architecture.mermaid  pyproject.toml
docs/: ADRs.md  AI-ARCHITECTURE.md  ARCHITECTURE.md  DESIGN-REVIEW.md  EVAL-SPEC.md  OBSERVABILITY.md  PRD.md  README.md  REQUIREMENTS.md  ROADMAP.md
docs/plans/: README.md  phase-0.md  phase-1.md  phase-2-gate.md  phase-2.md
src/fieldops/: __init__.py  cli.py  config.py  db.py  models.py  tracing.py
src/fieldops/api/: __init__.py  app.py
src/fieldops/classify/: __init__.py  calibration.py  cascade.py  cheap.py  gate.py  llm_classify.py  multilabel.py  taxonomy.py  types.py
src/fieldops/data/: dedup_pairs.CARD.md  dedup_pairs.jsonl  sample_311.json
src/fieldops/dedup/: __init__.py  embed.py  link.py
src/fieldops/eval/: __init__.py  calibration.py  classify_eval.py  dedup_eval.py  metrics.py
src/fieldops/guardrails/: __init__.py  pii.py
src/fieldops/ingest/: __init__.py  backfill.py  socrata.py
src/fieldops/llm/: __init__.py  base.py  factory.py  grok_client.py  groq_client.py  openai_client.py
src/fieldops/pipeline/: __init__.py  classify.py  draft.py  ingest.py  runner.py
src/fieldops/profiling/: __init__.py  ambiguity.py
tests/: conftest.py  test_ambiguity.py  test_backfill.py  test_calibration.py  test_classify_cascade.py  test_classify_cheap.py  test_classify_eval.py  test_classify_llm.py  test_dedup_db.py  test_eval_metrics.py  test_gate.py  test_multilabel.py  test_pii.py  test_pipeline_db.py  test_socrata.py  test_taxonomy.py  test_unit.py
