[project]
name = "fieldops-copilot"
version = "0.0.0"
description = "AI triage + work-order automation over NYC 311 service requests (walking skeleton)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
fieldops = "fieldops.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fieldops = ["data/*.json"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# One fast linter (ruff). `E501` enforces the 100-char budget on top of ruff's
# default Pyflakes/pycodestyle set. Deeper type-level checks are a type
# checker's job (mypy, planned ~Phase 2) — not a second linter.
extend-select = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
